--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fullcalendar/daygrid": "^6.1.5",
+    "@fullcalendar/interaction": "^6.1.5",
+    "@fullcalendar/list": "^6.1.5",
+    "@fullcalendar/react": "^6.1.5",
+    "@fullcalendar/timegrid": "^6.1.5",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
     "@testing-library/jest-dom": "^5.16.5",
