--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.3.0",
+    "chartjs": "^0.3.24",
     "install": "^0.13.0",
     "npm": "^9.6.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.8.2",
